test/expected/typedef_pa.out
typedef auto *A
        ^
9: error: "auto" illegal in type definition
